--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.topnav {
+.barra {
   overflow: hidden;
   background-color: #333;
 }
 
-.topnav a {
+.barra a {
   float: left;
   display: block;
   color: #f2f2f2;
@@ -24,36 +24,36 @@ body {
   font-size: 17px;
 }
 
-.topnav a:hover {
+.barra a:hover {
   background-color: #ddd;
   color: black;
 }
 
-.active {
+.btnactivo {
   background-color: #4CAF50;
   color: white;
 }
 
-.topnav .icon {
+.barra .icon {
   display: none;
 }
 
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
+  .barra a:not(:first-child) {display: none;}
+  .barra a.icon {
     float: right;
     display: block;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
+  .barra.respons {position: relative;}
+  .barra.respons .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
-  .topnav.responsive a {
+  .barra.respons a {
     float: none;
     display: block;
     text-align: left;
@@ -63,8 +63,8 @@ body {
 </head>
 <body>
 
-<div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Inicio</a>
+<div class="barra" id="barraid">
+  <a href="#home" class="btnactivo">Inicio</a>
   <a href="#news">Conocimientos</a>
   <a href="#contact">Contacto</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -79,11 +79,12 @@ body {
 
 <script>
 function myFunction() {
-    var x = document.getElementById("myTopnav");
-    if (x.className === "topnav") {
-        x.className += " responsive";
+    var x = document.getElementById("barraid");
+    alert(x)
+    if (x.className === "barra") {
+        x.className += " respons";
     } else {
-        x.className = "topnav";
+        x.className = "barra";
     }
 }
 </script>
