--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {
 
 <div class="barra" id="barraid">
   <a href="#home" class="btnactivo">Inicio</a>
-  <a href="#news">ConocimientoX</a>
+  <a href="#news">ConocimientosX</a>
   <a href="#contact">Contacto</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
